# XC-Meet-Webscraper

./: .breakpoints  README.md  athletes_for_pre_scraper.py  check_data_format.py  data.csv  main.py  manual.csv  notepad.py  notes_2.txt  pre_race_scraper.py  pyproject.toml  race_scraper.py  race_urls.py  race_urls_csv.csv  return_tbcleaned_1142022.txt
